[package]
name = "scuttle"
version = "0.1.0"
edition = "2021"
authors = ["HueCodes <huecodes@proton.me>"]
description = "A fast port scanner written in Rust"
license = "MIT"
repository = "https://github.com/HueCodes/Scuttle"

[dependencies]
# Add dependencies as you need them - uncomment when ready to use

# CLI parsing
# clap = { version = "4.5", features = ["derive"] }

# Error handling
# anyhow = "1.0"
# thiserror = "1.0"

# Async runtime (for advanced async scanning)
# tokio = { version = "1.36", features = ["full"] }

# Parallel iteration (easiest concurrency option)
# rayon = "1.8"

# JSON output
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"

# Progress bars
# indicatif = "0.17"

# Colored terminal output
# colored = "2.1"

[dev-dependencies]
# Testing utilities

[[bin]]
name = "scuttle"
path = "src/main.rs"

[profile.release]
# Optimization for release builds
opt-level = 3
lto = true
codegen-units = 1
