[package]
name = "scuttle"
version = "0.1.0"
edition = "2021"
authors = ["HueCodes <huecodes@proton.me>"]
description = "A high-performance port scanner written in Rust"
license = "MIT"
repository = "https://github.com/HueCodes/Scuttle"

[dependencies]
# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Raw packet manipulation (for SYN scanning)
pnet = "0.35"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# DNS resolution
trust-dns-resolver = "0.23"

# Progress and display
indicatif = "0.17"
console = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
futures = "0.3"
socket2 = { version = "0.5", features = ["all"] }
rand = "0.8"
libc = "0.2"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "scuttle"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
