[package]
name = "scuttle"
version = "0.2.0"
edition = "2021"
authors = ["HueCodes <huecodes@proton.me>"]
description = "A high-performance network port scanner written in Rust"
license = "MIT"
repository = "https://github.com/HueCodes/Scuttle"
keywords = ["network", "scanner", "security", "port-scanner", "async"]
categories = ["command-line-utilities", "network-programming"]

[lib]
name = "scuttle"
path = "src/lib.rs"

[[bin]]
name = "scuttle"
path = "src/main.rs"

[dependencies]
# CLI parsing with derive macros
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Raw packet manipulation (for SYN scanning)
pnet = "0.35"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# DNS resolution
trust-dns-resolver = "0.23"

# Progress and display
indicatif = "0.17"
console = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
futures = "0.3"
socket2 = { version = "0.5", features = ["all"] }
rand = "0.8"
libc = "0.2"

# XDG-compliant config directories
directories = "5.0"

# CIDR parsing
ipnetwork = "0.20"

# Unique ID generation for scan results
uuid = { version = "1.11", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Rate limiting
governor = "0.8"

# Nonzero integers for rate limiting
nonzero_ext = "0.3"

# Async trait support
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
